<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    	android:background="@drawable/shape">
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content">

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/infoLojaNome"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textStyle="normal|bold" 
            	android:textColor="#000000"/>
            
        	<TextView
            	android:id="@+id/infoLojaNome"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textStyle="bold"
            	android:layout_marginLeft="5dp"
            	android:layout_marginBottom="20dp"
            	android:textColor="#000000" />

    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:typeface="monospace"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textColor="#000000"
            	android:textStyle="normal|bold"
            	android:text="@string/infoLojaMorada" />

        	<TextView
            	android:id="@+id/infoLojaMorada"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textStyle="normal|italic"
            	android:layout_marginLeft="5dp"
            	android:layout_marginBottom="20dp"
            	android:textColor="#000000" />

    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content">

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:typeface="monospace"
            	android:layout_marginLeft="5dp"
            	android:layout_marginBottom="20dp"
            	android:textColor="#000000"
            	android:textStyle="normal|bold"
            	android:text="@string/infoLojaCodigoPostal" />

        	<TextView
            	android:id="@+id/infoLojaCodigoPostal"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textStyle="normal|italic"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textColor="#000000" />

    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content">

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:typeface="monospace"
            	android:layout_marginBottom="20dp"
            	android:textColor="#000000"
            	android:layout_marginLeft="5dp"
            	android:textStyle="normal|bold"
            	android:text="@string/infoLojaConcelho" />

        	<TextView
            	android:id="@+id/infoLojaConcelho"
            	android:layout_width="wrap_content"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textStyle="normal|italic"
            	android:layout_height="wrap_content"
            	android:textColor="#000000" />

    	</LinearLayout>
    
    	<LinearLayout
        android:layout_width="match_parent"
        	android:layout_height="wrap_content">

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:typeface="monospace"
            	android:layout_marginBottom="20dp"
            	android:textColor="#000000"
            	android:layout_marginLeft="5dp"
            	android:textStyle="normal|bold"
            	android:text="@string/infoLojaDistrito" />

        	<TextView
            	android:id="@+id/infoLojaDistrito"
            	android:layout_width="wrap_content"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textStyle="normal|italic"
            	android:layout_height="wrap_content"
            	android:textColor="#000000" />

    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:typeface="monospace"
            	android:textColor="#000000"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textStyle="normal|bold"
            	android:text="@string/infoLojaTelefone" />

        	<TextView
            	android:id="@+id/infoLojaTelefone"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:clickable="true"
            	android:textStyle="normal|italic" 
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textColor="#0000FF"/>

   		</LinearLayout>
    </LinearLayout>
    
    <LinearLayout 
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" 
        android:gravity="center">
        
        <LinearLayout
        	android:layout_weight="50"
            android:layout_width="match_parent"
       	 	android:layout_height="match_parent"
       	 	android:orientation="vertical">
       	 	<ImageButton
       	 	    android:contentDescription="BotaoMapa"
       	 	    android:layout_marginTop="15dp"  
            	android:id="@+id/infoLojaMapa"
        		android:layout_width="80dp"
        		android:layout_height="75dp"
        		android:background="@drawable/googlemapsicon"
        		android:clickable="true"
        		android:layout_gravity="center_horizontal"/>
        		<!--android:layout_centerInParent="true"/>-->
        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:clickable="true"
            	android:textStyle="normal|italic" 
            	android:layout_marginBottom="20dp"
            	android:layout_gravity="center_horizontal"
            	android:text="@string/infoLojaBotaoMapa"/>
        </LinearLayout>
        
         <LinearLayout
            android:layout_weight="50"
            android:layout_width="match_parent"
       	 	android:layout_height="fill_parent"
       	 	android:orientation="vertical">
        	<ImageButton
        		android:contentDescription="BotaoBalcoes" 
            	android:id="@+id/infoLojaBalcoes"
            	android:layout_marginTop="15dp"
            	android:layout_width="80dp"
        		android:layout_height="75dp"
        		android:background="@drawable/balcao"
        		android:clickable="true"
        		android:layout_gravity="center_horizontal"/>
            <!-- android:layout_centerInParent="true"/>-->
            <TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:clickable="true"
            	android:textStyle="normal|italic" 
            	android:layout_marginBottom="20dp"
            	android:layout_gravity="center_horizontal"
            	android:text="@string/infoLojaBotaoBalcoes"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
