<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">
    
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
    	android:background="@drawable/shape">
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/infoServicoNome" 
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:typeface="monospace"
            	android:textStyle="normal|bold" 
            	android:textColor="#000000"/>
            
        	<TextView
            	android:id="@+id/infoServicoNome"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content" 
            	android:textStyle="normal|italic"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textColor="#000000"/>

    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

        	<TextView
           		android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/infoServicoDescricao" 
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:typeface="monospace"
            	android:textStyle="normal|bold" 
            	android:textColor="#000000"/>
            
        	<TextView
            	android:id="@+id/infoServicoDescricao"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content" 
            	android:textStyle="normal|italic"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textColor="#000000"/>

    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/infoServicoTipo" 
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:typeface="monospace"
            	android:textStyle="normal|bold" 
            	android:textColor="#000000"/>
            
        	<TextView
            	android:id="@+id/infoServicoTipo"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content" 
            	android:textStyle="normal|italic"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textColor="#000000"/>

    	</LinearLayout>
    
    	<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content" >

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/infoServicoUrl" 
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:typeface="monospace"
            	android:textStyle="normal|bold" 
            	android:textColor="#000000"/>
            
        	<TextView
            	android:id="@+id/infoServicoUrl"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content" 
            	android:textStyle="normal|italic"
            	android:layout_marginBottom="20dp"
            	android:layout_marginLeft="5dp"
            	android:textColor="#0000FF"/>

    	</LinearLayout>
    </LinearLayout>
    
</LinearLayout>
